# petist

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  manage.py  nginx.conf  pyproject.toml  requirements.txt
animals/: admin.py  consumers.py  forms.py  models.py  routing.py  services.py  urls.py  views.py
animals/fixtures/: final_pets_data.json
animals/migrations/: 0001_initial.py  0002_alter_animal_options_alter_animalphoto_options_and_more.py
animals/templates/animals/: animal_detail.html  animal_list.html
animals/templates/animals/includes/: adopt_button.html  animal_card_list.html  animal_create_success.html  animal_form.html  animal_grid_oob.html  breed_options.html  favorite_button.html
animals/templates/animals/manager/: request_list.html
animals/templates/animals/manager/includes/: request_row.html
animals/templatetags/: animal_filters.py
care/: admin.py  forms.py  models.py  urls.py  views.py
care/templates/care/: animal_dashboard.html  dashboard_index.html
care/templates/care/partials/: task_item.html
petist/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: main.css
static/js/: main.js
templates/: base.html  home.html
users/: forms.py  models.py  urls.py  views.py
users/templates/users/: login.html  profile.html  register.html
users/templates/users/includes/: adopted_pets_container_oob.html  favorites_container_oob.html  favorites_count_oob.html  favorites_empty.html  my_pets_empty.html  sidebar_pets_count_oob.html
users/templates/users/partials/: login_form.html  register_form.html
