[project]
name = "petist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "annotated-types==0.7.0",
    "asgiref==3.11.1",
    "attrs==25.4.0",
    "autobahn==25.12.2",
    "automat==25.4.16",
    "cbor2==5.8.0",
    "certifi==2026.1.4",
    "cffi==2.0.0",
    "channels==4.3.2",
    "channels-redis==4.3.0",
    "charset-normalizer==3.4.4",
    "constantly==23.10.4",
    "cryptography==46.0.5",
    "daphne==4.2.1",
    "django==6.0.2",
    "django-debug-toolbar==6.2.0",
    "django-htmx==1.27.0",
    "django-qr-code==4.2.0",
    "django-redis==6.0.0",
    "hyperlink==21.0.0",
    "idna==3.11",
    "incremental==24.11.0",
    "msgpack==1.1.2",
    "packaging==26.0",
    "pillow==12.1.0",
    "psycopg2-binary==2.9.11",
    "py-ubjson==0.16.1",
    "pyasn1==0.6.2",
    "pyasn1-modules==0.4.2",
    "pycparser==3.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pyopenssl==25.3.0",
    "python-dotenv==1.2.1",
    "redis==7.2.0",
    "requests==2.32.5",
    "ruff==0.15.1",
    "segno==1.6.6",
    "service-identity==24.2.0",
    "sqlparse==0.5.5",
    "twisted==25.5.0",
    "txaio==25.12.2",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.3",
    "ujson==5.11.0",
    "urllib3==2.6.3",
    "zope-interface==8.2",
]
